--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "Guild Profile",
-  "version": "1.2.3",
+  "version": "1.2.3A",
   "description": "Allows you to open a guild profile modal that gives you various information about the guild.",
-  "author": "NurMarvin",
+  "author": "NurMarvin, A user",
   "license": "OSL-3.0"
 }
