--- a/manifest.json
+++ b/manifest.json
@@ -3,5 +3,6 @@
   "version": "1.2.3A",
   "description": "Allows you to open a guild profile modal that gives you various information about the guild.",
   "author": "NurMarvin, A user",
+  "icon": "icon.png",
   "license": "OSL-3.0"
 }
